# syndication

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5SyndicationConfig.cmake.in  KF6SyndicationConfig.cmake.in  Mainpage.dox  abstractparser.cpp  abstractparser.h  category.cpp  category.h  constants.cpp  constants.h  dataretriever.cpp  dataretriever.h  documentsource.cpp  documentsource.h  documentvisitor.cpp  documentvisitor.h  elementwrapper.cpp  elementwrapper.h  enclosure.cpp  enclosure.h  feed.cpp  feed.h  global.cpp  global.h  image.cpp  image.h  item.cpp  item.h  ksyndication.h  ksyndication_export.h  libsyndication.h  loader.cpp  loader.h  mapper.h  metainfo.yaml  parsercollection.h  parsercollectionimpl.h  (+15 more)
autotests/: CMakeLists.txt  benchmark.cpp  loaderutiltest.cpp  loaderutiltest.h  syndicationtest.cpp  syndicationtest.h  testlibsyndication.cpp  testloader.cpp  testpersonimpl.cpp  testpersonimpl.h
autotests/atom/: atom10_entry_content.xml.expected  atom10_relative_uris.xml.expected  bug-190068.xml.expected  bug-414086.xml.expected  tbray.org_nested_xmlbase.xml.expected
autotests/rdf/: javaworld.xml.expected
autotests/rss2/: chaosradio-podcast.xml.expected  xhtml-i.xml.expected  xhtml-j.xml.expected
rdf/: CMakeLists.txt  contentvocab.cpp  contentvocab.h  document.cpp  document.h  dublincore.cpp  dublincore.h  dublincorevocab.cpp  dublincorevocab.h  image.cpp  image.h  item.cpp  item.h  literal.cpp  literal.h  model.cpp  model.h  model_p.h  modelmaker.cpp  modelmaker.h  node.cpp  node.h  nodevisitor.cpp  nodevisitor.h  parser.cpp  parser.h  property.cpp  property.h  rdf.h  rdfvocab.cpp  rdfvocab.h  resource.cpp  resource.h  resourcewrapper.cpp  resourcewrapper.h  rssvocab.cpp  rssvocab.h  sequence.cpp  sequence.h  statement.cpp  (+7 more)
src/: CMakeLists.txt  abstractparser.cpp  abstractparser.h  category.cpp  category.h  constants.cpp  constants.h  dataretriever.cpp  dataretriever.h  documentsource.cpp  documentsource.h  documentvisitor.cpp  documentvisitor.h  elementwrapper.cpp  elementwrapper.h  enclosure.cpp  enclosure.h  feed.cpp  feed.h  global.cpp  global.h  image.cpp  image.h  item.cpp  item.h  loader.cpp  loader.h  loaderutil.cpp  loaderutil_p.h  mapper.h  parsercollection.h  parsercollectionimpl.h  person.cpp  person.h  personimpl.cpp  personimpl.h  specificdocument.cpp  specificdocument.h  specificitem.cpp  specificitem.h  (+9 more)
src/atom/: CMakeLists.txt  atom.h  atomtools.cpp  atomtools.h  category.cpp  category.h  constants.cpp  constants.h  content.cpp  content.h  document.cpp  document.h  entry.cpp  entry.h  generator.cpp  generator.h  link.cpp  link.h  parser.cpp  parser.h  person.cpp  person.h  source.cpp  source.h
src/mapper/: categoryatomimpl.cpp  categoryatomimpl.h  categoryrss2impl.cpp  categoryrss2impl.h  enclosureatomimpl.cpp  enclosureatomimpl.h  enclosurerss2impl.cpp  enclosurerss2impl.h  feedatomimpl.cpp  feedatomimpl.h  feedrdfimpl.cpp  feedrdfimpl.h  feedrss2impl.cpp  feedrss2impl.h  imageatomimpl.h  imagerdfimpl.cpp  imagerdfimpl.h  imagerss2impl.cpp  imagerss2impl.h  itematomimpl.cpp  itematomimpl.h  itemrdfimpl.cpp  itemrdfimpl.h  itemrss2impl.cpp  itemrss2impl.h  mapperatomimpl.h  mapperrdfimpl.h  mapperrss2impl.h
src/rdf/: CMakeLists.txt  contentvocab.cpp  contentvocab.h  document.cpp  document.h  dublincore.cpp  dublincore.h  dublincorevocab.cpp  dublincorevocab.h  image.cpp  image.h  item.cpp  item.h  literal.cpp  literal.h  model.cpp  model.h  model_p.h  modelmaker.cpp  modelmaker.h  node.cpp  node.h  nodevisitor.cpp  nodevisitor.h  parser.cpp  parser.h  property.cpp  property.h  rdf.h  rdfvocab.cpp  rdfvocab.h  resource.cpp  resource.h  resourcewrapper.cpp  resourcewrapper.h  rssvocab.cpp  rssvocab.h  sequence.cpp  sequence.h  statement.cpp  (+7 more)
src/rss2/: CMakeLists.txt  category.cpp  category.h  cloud.cpp  cloud.h  document.cpp  document.h  enclosure.cpp  enclosure.h  image.cpp  image.h  item.cpp  item.h  parser.cpp  parser.h  rss2.h  source.cpp  source.h  textinput.cpp  textinput.h  tools_p.h
src/syndication/: CMakeLists.txt  abstractparser.cpp  abstractparser.h  category.cpp  category.h  constants.cpp  constants.h  dataretriever.cpp  dataretriever.h  documentsource.cpp  documentsource.h  documentvisitor.cpp  documentvisitor.h  elementwrapper.cpp  elementwrapper.h  enclosure.cpp  enclosure.h  feed.cpp  feed.h  global.cpp  global.h  image.cpp  image.h  item.cpp  item.h  loader.cpp  loader.h  mapper.h  parsercollection.h  parsercollectionimpl.h  person.cpp  person.h  personimpl.cpp  personimpl.h  specificdocument.cpp  specificdocument.h  specificitem.h  specificitemvisitor.cpp  specificitemvisitor.h  syndication.h  (+2 more)
src/syndication/atom/: CMakeLists.txt  atom.h  (+22 more)
tests/: CMakeLists.txt  benchmark.cpp  testfeeds.rb  testlibsyndication.cpp  testloader.cpp  testloader.h  testpersonimpl.cpp  testpersonimpl.h
tests/atom/: atom10_entry_content.xml.expected  atom10_relative_uris.xml.expected  bildblog.xml.expected  blogspot.com-plaintext.xml  blogspot.com-plaintext.xml.expected  blogspot.com_heimwege.xml.expected  bug-190068.xml.expected  heise-atom.xml.expected  qtblog.xml.expected  rssowl.org.xml.expected  tbray.org_nested_xmlbase.xml.expected
tests/rdf/: don.antville.org.xml.expected  javaworld.xml.expected  laut.de.xml.expected  security_debian.rdf.xml.expected  slashdot.xml.expected  tagesschau.de.xml.expected
tests/rss2/: akregator_blog_rss2.xml.expected  arstechnica.xml.expected  assembla.xml  assembla.xml.expected  chaosradio-podcast.xml.expected  cia_osterfeld.xml.expected  content-g.xml.expected  corante.com_many.xml.expected  desc-a.xml.expected  desc-b.xml.expected  desc-d.xml.expected  desc-e.xml.expected  feedster_search_akregator.xml.expected  inhabitat.xml.expected  kde-apps.rss2.xml.expected  linux_org_ru.xml.expected  linuxfr_forums.xml.expected  lunatic_fringe.xml.expected  reddit.com.xml.expected  schockwellenreiter.xml.expected  spreeblick.xml.expected  stefandecker.org.xml.expected  xhtml-h.xml.expected  xhtml-i.xml.expected  xhtml-j.xml.expected  xhtml-k.xml.expected  zeit.de.xml.expected
(+168 files in other folders)
